# dad-protocol

./: .gitignore  DAD_protocol.ipynb  LICENSE  README.md  RUN_TEST_GUIDE.md  source_data_audit.md
code/: CITATION.cff  README.md  pyproject.toml
code/dad/: LICENSE  __init__.py  io.py
code/dad/core/: __init__.py  docking.py  interaction.py  pocket.py  structure.py  triage.py  visualize.py
code/notebooks/: COLAB_USAGE_GUIDE.md  DAD_protocol.ipynb  dad_run.ipynb  setup_colab.ipynb
code/tests/: TESTS_README.md  conftest.py  test_docking.py  test_structure.py  test_triage.py
code/workflow/: Snakefile  WORKFLOW_README.md  config.yaml
development_logs/: colab_setup_fix_log.md  two_phase_architecture_plan.md
figures/: fig01_workflow_caption.md  fig02_triage_tree_caption.md  fig03_rmsd_boxplot_caption.md  fig04_cnn_roc_caption.md  fig05_interaction_caption.md  figS01_pose_ranking_caption.md
manuscript/: DAD_manuscript_v1.md
pytest_tmp/: test_best_pose_matches_firstcurrent  test_cluster_can_differ_from_ecurrent  test_compute_max_dimcurrent  test_consensus_returns_valid_scurrent  test_contact_residues_schemacurrent  test_contacts_sorted_by_distancurrent  test_coords_shapecurrent  test_csv_columnscurrent  test_cxc_contentcurrent  test_cxc_empty_residuescurrent  test_ensemble_selects_highest_current  test_gnina_command_structurecurrent  test_gnina_missing_receptor_racurrent  test_gnina_nonzero_exit_raisescurrent  test_ground_truth_valuescurrent  test_html_output_structurecurrent  test_load_aw1_asset_raises_forcurrent  test_load_aw1_asset_raises_whecurrent  (+28 more)
(+56 files in other folders)
